name:                breakpoint
version:             0.1.0.0
synopsis:            Set breakpoints for imperative debuggers (e.g. gdb)
-- description:         
homepage:            https://github.com/bgamari/breakpoint
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Breakpoint
  c-sources:           cbits/breakpoint.c
  cc-options:          -g -O0
  ghc-options:         -g -O0
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >=4.10 && <4.11, ghc-prim
  default-language:    Haskell2010

executable breakpoint-example
  default-language:    Haskell2010
  build-depends:       base, ghc-prim, breakpoint
  main-is:             breakpoint-example.hs
  ghc-options:         -g -O0
